<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settingsHeader">Настройки</string>
    <string name="searchHeader">Поиск</string>
    <string name="darkThemeSetting">Темная тема</string>
    <string name="shareAppSetting">Поделиться приложением</string>
    <string name="contactSupportSetting">Написать в подддержку</string>
    <string name="userAgreementSetting">Пользовательское соглашение</string>
    <string name="mainHeader">Playlist maker</string>
    <string name="Search">Поиск</string>
    <string name="MediaLibrary">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="ShareAppMessage">https://practicum.yandex.ru/android-developer/</string>
    <string name="LicenseUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="SupportEmail">aleynik@status-it.ru</string>
    <string name="SupportMessageHeader">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="SupportMessageText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="SearchBoxHint">Поиск</string>
    <string name="errorTracksNotFound">Ничего не нашлось</string>
    <string name="errorNetworkError">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="errorPageBtnTextUpdate">Обновить</string>
    <string name="SearchHistoryHeader">Вы искали</string>
    <string name="ClearSearchHistoryButtonText">Очистить историю</string>
    <string name="trackDetailsDurationLabel">Длительность</string>
    <string name="trackDetailsAlbumLabel">Альбом</string>
    <string name="trackDetailsYearLabel">Год</string>
    <string name="trackDetailsGenreLabel">Жанр</string>
    <string name="trackDetailsCountryLabel">Страна</string>
    <string name="trackDetailUnknown">Unknown</string>
    <string name="mediaLibraryHeader">Медиатека</string>
    <string name="msgEmptyFavs">Ваша медиатека пуста</string>
    <string name="msgNoPlaylists">Вы не создали\nни одного плейлиста</string>
    <string name="btnNewPlaylist">Новый плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlistCreationExitDialogTitle">Завершить создание плейлиста?</string>
    <string name="playlistCreationExitDialogMessage">Все несохраненные данные будут потеряны</string>
    <string name="playlistCreationExitDialogCancelButton">Отмена</string>
    <string name="playlistCreationExitDialogExitButton">Завершить</string>
    <plurals name="numPlaylistSongs">
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="alreadyInPlaylist">Трек уже добавлен в плейлист %s</string>
    <string name="successAddingToPlaylist">Добавлено в плейлист %s</string>
    <string name="playlistDuration">%$1d %$2s  •  </string>
    <string name="noTrackInPlaylistForSharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <plurals name="playlistDurationMinutes">
        <item quantity="one">%s минута</item>
        <item quantity="two">%s минуты</item>
        <item quantity="few">%s минуты</item>
        <item quantity="other">%s минут</item>
    </plurals>
    <string name="removePlaylistDialogTitle">Удалить плейлист</string>
    <string name="removePlaylistDialogMessage">Хотите удалить плейлист?</string>
    <string name="removePlaylistDialogBtnYes">Да</string>
    <string name="removePlaylistDialogBtnNo">Нет</string>
    <string name="editPlaylistBtnSave">Сохранить</string>
    <string name="editPlaylistExitDialogTitle">Завершить редактирование плейлиста?</string>
    <string name="editPlaylistHeader">Редактировать</string>
    <string name="removeTrackDialogTitle">Удалить трек</string>
    <string name="removeTrackDialogMessage">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="removeTrackDialogBtnYes">Да</string>
    <string name="removeTrackDialogBtnNo">Нет</string>
    <string name="newPlaylistCreateBtn">Создать</string>
</resources>