<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMakerSecondary"
    android:background="?attr/colorSecondary"
    tools:context=".settings.ui.SettingsFragment">

    <TextView
        android:id="@+id/settingsHeader"
        style="@style/HeaderText"
        android:text="@string/settingsHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/btnToggleDarkTheme"
        style="@style/SettingsItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/settingsHeader"
        android:trackTint="?attr/colorTertiary"
        android:thumbTint="?attr/colorTertiary"
        android:text="@string/darkThemeSetting"/>
    <TextView
        android:id="@+id/btnShare"
        style="@style/SettingsItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        app:layout_constraintTop_toBottomOf="@id/btnToggleDarkTheme"
        android:text="@string/shareAppSetting"/>
    <TextView
        android:id="@+id/btnSupport"
        style="@style/SettingsItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        app:layout_constraintTop_toBottomOf="@id/btnShare"
        android:text="@string/contactSupportSetting"/>
    <TextView
        android:id="@+id/btnUserAgreement"
        style="@style/SettingsItemText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/bracket_right"
        android:paddingEnd="@dimen/settingsIconPadding"
        app:layout_constraintTop_toBottomOf="@id/btnSupport"
        android:text="@string/userAgreementSetting"/>

</androidx.constraintlayout.widget.ConstraintLayout>