<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMakerSecondary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/btnBackFromSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/arrow_left"
                />

            <TextView
                style="@style/HeaderText"
                android:layout_gravity="start|center_vertical"
                android:text="@string/settingsHeader"
                android:textAlignment="textStart"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <Switch
                android:id="@+id/btnToggleDarkTheme"
                style="@style/SettingsItemText"
                android:layout_width="match_parent"
                android:paddingRight="6dp"
                android:trackTint="?attr/colorTertiary"
                android:thumbTint="?attr/colorTertiary"
                android:text="@string/darkThemeSetting"/>
            <LinearLayout
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/SettingsItemText"
                        android:text="@string/shareAppSetting"/>
                    <ImageView
                        style="@style/SettingsItemIcon"
                        android:src="@drawable/share" />
                </FrameLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/SettingsItemText"
                        android:text="@string/contactSupportSetting"/>
                    <ImageView
                        style="@style/SettingsItemIcon"
                        android:src="@drawable/support" />
                </FrameLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnUserAgreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/SettingsItemText"
                        android:text="@string/userAgreementSetting"/>
                    <ImageView
                        style="@style/SettingsItemIcon"
                        android:src="@drawable/bracket_right" />
                </FrameLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>