<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMakerSecondary"
    android:background="?attr/colorSecondary"
    tools:context=".search.ui.SearchFragment">

    <TextView
        android:id="@+id/searchHeader"
        style="@style/HeaderText"
        android:layout_gravity="start|center_vertical"
        android:text="@string/searchHeader"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchBox"
        style="@style/SearchBox"
        android:layout_weight="1"
        android:hint="@string/SearchBoxHint"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/searchHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/searchBoxClearIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:src="@drawable/clear"
        android:visibility="gone"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@id/searchBox"
        app:layout_constraintTop_toTopOf="@id/searchBox"
        app:layout_constraintBottom_toBottomOf="@id/searchBox"
        tools:visibility="visible"
        />
    <ProgressBar
        android:id="@+id/progressSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintTop_toBottomOf="@id/searchBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:visibility="gone"
        tools:visibility="visible"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/searchHistoryGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="searchHistoryHeader, btnClearSearchHistory"/>
    <TextView
        android:id="@+id/searchHistoryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SearchHistoryHeader"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="19sp"
        android:textAlignment="center"
        android:paddingHorizontal="16dp"
        android:paddingTop="18dp"
        android:paddingBottom="12dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:textColor="?attr/colorOnSecondary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchBox"
        tools:visibility="visible"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchHistoryHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnClearSearchHistory"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        app:layout_constrainedHeight="true"
        app:layout_goneMarginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <Button
        android:id="@+id/btnClearSearchHistory"
        android:text="@string/ClearSearchHistoryButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchRecycler"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonClearSearchHistory"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="56dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>